--- a/packages/trace-admin/public/index.html
+++ b/packages/trace-admin/public/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF - 8">
-    <title>My React App</title>
-</head>
-<!-- 正确的位置 -->
-<body>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>React TS App</title>
+  </head>
+  <body>
     <div id="root"></div>
   </body>
 </html>
