--- a/packages/trace-sdk/src/plugins/performance-tracking/test/test.html
+++ b/packages/trace-sdk/src/plugins/performance-tracking/test/test.html
@@ -10,6 +10,6 @@
     <div id="app">123</div>
 
     <!-- 引入打包文件 -->
-    <script type="module" src="./test.js"></script>
+    <script type="module" src="../../../../dist/bundle.js"></script>
   </body>
 </html>
