chore:重构项目目录结构，将文件移动到新的目录中

--- a/packages/trace-sdk/src/plugins/event-tracking/text/text.html
+++ b/packages/trace-sdk/src/plugins/event-tracking/text/text.html
@@ -12,7 +12,7 @@
     <button id="replaceStateButton">Replace State</button>
     <button id="changeHashButton">Change Hash</button>
     <button id="goBackButton">Go Back</button>
-    <script type="module" src="../../../dist/bundle.js"></script>
+    <script type="module" src="../../../../dist/bundle.js"></script>
     <script>
       document.getElementById('pushStateButton').addEventListener('click', () => {
         history.pushState(null, '', '/new-page');
