--- a/packages/trace-sdk/src/plugins/performance-tracking/test/test.html
+++ b/packages/trace-sdk/src/plugins/performance-tracking/test/test.html
@@ -3,15 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="../../../../dist/bundle.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="../../../../dist/bundle.js"></script>
     <title>标准HTML模板</title>
   </head>
   <body>
-    <div id="app">123</div>
-    <script>
+    <div>
+      <h1>性能监控测试页面</h1>
+    </div>
+    
+    <div>
+      <button>测试按钮1</button>
+      <button>测试按钮2</button>
+      <img src="./test.png" alt="test"/>
+    </div>
+
+     <script>
+      MyLibrary.init();
+      const http=MyLibrary.initAxios();
+      http.get('/api/test');
+      
       setTimeout(() => {
         const start = Date.now();
-        while (Date.now() - start < 60) {} // 阻塞主线程 60ms
+        while (Date.now() - start < 60) {} 
       }, 1000);
     </script>
   </body>
