refactor: 💡 规范sdk全局变量名命名

--- a/packages/trace-sdk/src/plugins/performance-tracking/test/test.html
+++ b/packages/trace-sdk/src/plugins/performance-tracking/test/test.html
@@ -19,8 +19,8 @@
     </div>
 
      <script>
-      MyLibrary.init();
-      const http=MyLibrary.initAxios();
+      TraceSDK.init();
+      const http=TraceSDK.initAxios();
       http.get('/api/test');
       
       setTimeout(() => {
