--- a/packages/trace-sdk/test/test.html
+++ b/packages/trace-sdk/test/test.html
@@ -20,7 +20,7 @@
 
   <script>
     // 初始化SDK
-    const tracker = new MyLibrary.Tracker({
+    const tracker = new TraceSDK.Tracker({
       report: (event) => {
         // 打印上报数据到控制台
         console.log('[REPORT]', event);
