feat:新增XMLHttpRequest 的劫持与数据捕获

--- a/packages/trace-sdk/src/plugins/event-tracking/text/text.html
+++ b/packages/trace-sdk/src/plugins/event-tracking/text/text.html
@@ -12,6 +12,8 @@
     <button id="replaceStateButton">Replace State</button>
     <button id="changeHashButton">Change Hash</button>
     <button id="goBackButton">Go Back</button>
+    <button class="sb">点击我</button>
+    <button id="testBtn">发起请求</button>
     <script type="module" src="../../../../dist/bundle.js"></script>
     <script>
       document.getElementById('pushStateButton').addEventListener('click', () => {
@@ -33,6 +35,14 @@
         window.history.back();
         console.log('GoBack 被调用');
       });
+      document.getElementById('testBtn').addEventListener('click', function(){
+      const xhr = new XMLHttpRequest();
+      xhr.open('GET', 'https://jsonplaceholder.typicode.com/todos/1', true);
+      xhr.onload = function() {
+        console.log('收到响应：', xhr.responseText);
+      };
+      xhr.send();
+    });
     </script>
   </body>
 </html>
