feat: 🎸 部署上线、调整数据库和鉴权相关配置

--- a/packages/trace-sdk/src/plugins/error-tracking/__tests__/test.html
+++ b/packages/trace-sdk/src/plugins/error-tracking/__tests__/test.html
@@ -25,7 +25,7 @@
                 if (typeof traceSDK.init === 'function') {
                     traceSDK.init({
                         appId: 'test-app',
-                        reportUrl: 'http://localhost:3000/error-monitoring/report',
+                        reportUrl: 'http://47.122.48.232:3000/error-monitoring/report',
                         batchReport: true,
                         batchSize: 5,
                         batchTimeout: 3000,
