--- a/packages/trace-sdk/src/plugins/performance-tracking/test/test.html
+++ b/packages/trace-sdk/src/plugins/performance-tracking/test/test.html
@@ -23,6 +23,9 @@
         const start = Date.now();
         while (Date.now() - start < 60) {}
       }, 1000);
+      //模拟xhr请求错误
+      const xhr = new XMLHttpRequest();
+      xhr.open("GET", "https://www.error123.com/xxx");
     </script>
   </body>
 </html>
